@@ -76,6 +76,17 @@ cleanexit ()
 	logmsg $LOG_DEBUG "exiting"
 }
 
+# Runs command without error trapping and check exitcode
+runcheck ()
+{
+	set +e
+	trap - ERR
+	$@
+	exitcode=$?
+	set -e
+	trap error ERR
+}
+
 # Error and logging functions
 . "$DJ_LIBDIR/lib.error.sh"
 
@@ -105,7 +116,7 @@ PROGLANG="$1";  shift
 TESTIN="$1";    shift
 TESTOUT="$1";   shift
 TIMELIMIT="$1"; shift
-WORKDIR="$1";    shift
+WORKDIR="$1";   shift
 SPECIALRUN="$1";
 SPECIALCOMPARE="$2";
 logmsg $LOG_DEBUG "arguments: '$SOURCE' '$PROGLANG' '$TESTIN' '$TESTOUT' '$TIMELIMIT' '$WORKDIR'"
@@ -167,9 +178,8 @@ logmsg $LOG_INFO "starting compile"
 
 # First compile to 'source' then rename to 'program' to avoid problems with
 # the compiler writing to different filenames and deleting intermediate files.
-( "$RUNGUARD" ${DEBUG:+-v} -t $COMPILETIME -o compile.time -- \
-	"$COMPILE_SCRIPT" "source.$EXT" source "$MEMLIMIT" ) &>compile.tmp
-exitcode=$?
+runcheck "$RUNGUARD" ${DEBUG:+-v} -t $COMPILETIME -f $FILELIMIT -o compile.time -- \
+	"$COMPILE_SCRIPT" "source.$EXT" source "$MEMLIMIT" &>compile.tmp
 if [ -f source ]; then
     mv -f source program
     chmod a+rx program
@@ -217,11 +227,10 @@ disown $CATPID
 # Run the solution program (within a restricted environment):
 logmsg $LOG_INFO "running program (USE_CHROOT = ${USE_CHROOT:-0})"
 
-( "$RUNGUARD" ${DEBUG:+-v} ${USE_CHROOT:+-r "$PWD"} -u "$RUNUSER" \
+runcheck "$RUNGUARD" ${DEBUG:+-v} ${USE_CHROOT:+-r "$PWD"} -u "$RUNUSER" \
 	-t $TIMELIMIT -m $MEMLIMIT -f $FILELIMIT -p $PROCLIMIT -c -o program.time -- \
 	$PREFIX/$RUN_SCRIPT $PREFIX/program testdata.in program.out program.err program.exit \
-) &>error.tmp
-exitcode=$?
+	&>error.tmp
 
 # Execute an optional chroot destroy script:
 if [ "$USE_CHROOT" -a "$CHROOT_SCRIPT" ]; then
